@@ -1,3 +1,6 @@
+- diskdrake
+  o add a comment (a la ubuntu) in fstab when using UUID=
+
 Version 10.4.184 - 3 September 2007, by Thierry Vignaud
 
 - diskdrake
